feat: update Open Graph meta tags and remove deprecated head configuration

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Secure Auth</title>
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Secure Auth" />
+    <meta
+      property="og:description"
+      content="A secure authentication system with modern features."
+    />
+    <meta property="og:image" content="https://auth.akgbytes.com/preview.png" />
+    <meta property="og:url" content="https://auth.akgbytes.com/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
